<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">
    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/sobre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Creator"
            android:textStyle="bold"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="78dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="202dp"
            android:layout_height="191dp"
            android:contentDescription="@string/imgDescription"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:srcCompat="@drawable/b427247ebed5ab1acca4a08855c0fd13" />

        <Button
            android:id="@+id/websiteButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:text="@string/webSite"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"

            app:layout_constraintTop_toBottomOf="@id/imageView"></Button>


        <Button
            android:id="@+id/supportButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/support"
            app:layout_constraintStart_toStartOf="@id/websiteButton"
            app:layout_constraintTop_toBottomOf="@id/websiteButton"></Button>

        <Button
            android:id="@+id/backButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="@id/supportButton"
            app:layout_constraintTop_toBottomOf="@id/supportButton"></Button>

        <TextView
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Filmoteca.Text"
            tools:text="@{@string/nombre_recurso + ' - Mi texto hardcodeado'}"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toStartOf="@id/supportButton"
            app:layout_constraintEnd_toEndOf="@id/supportButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
